--- a/app/code/Amc/Protocol/view/adminhtml/layout/amc_protocol_index_index.xml
+++ b/app/code/Amc/Protocol/view/adminhtml/layout/amc_protocol_index_index.xml
@@ -3,7 +3,7 @@
     <head>
         <!--<link src="Amc_Protocol::js/keynavigator.js"/>-->
         <link src="Amc_Protocol::js/widget.js"/>
-        <css src="Amc_Protocol::css/list.css"/>
+        <css src="Amc_Protocol::css/styles.css"/>
     </head>
     <body>
         <referenceContainer name="content">
